# lbp

./: .gitignore  cli.py  experiment1.ipynb  pyproject.toml  stem_final.ipynb  train.py
configs/base/: base.yaml
configs/experiments/: exp_template.yaml  phase9a_baseline_scaffold.yaml  phase9a_frequency_only_scaffold.yaml  phase9a_hybrid_wavelet_frequency_scaffold.yaml  phase9a_wavelet_only_scaffold.yaml
configs/local/: dev.yaml  quickcheck.yaml
configs/server/: balanced.yaml  default.yaml  quickcheck.yaml  stable.yaml
context/: 01_scope_and_current_state.md  02_architecture_and_pipeline.md  03_data_segments_and_usage.md  04_indexing_precompute.md  05_entrypoints_and_execution_modes.md  06_notebook_state.md  07_known_risks_and_open_items.md  08_verification_playbook.md  09_update_protocol.md  10_repository_layout_reconciliation.md  11_transparent_surface_cues_lab.md  12_runtime_layout_and_cleanup_status.md  13_layereddepth_paper_baseline.md  14_paper_vs_current_delta.md  README.md
context/pi-haf/: 01_program_state_and_experiment_protocol.md  02_experiment_master_plan.md  03_stageA_local_notebook_protocol.md  04_stageB_server_script_protocol.md  05_architecture_spec_sfwin_rhag_backbone.md  06_loss_stack_math_and_schedule.md  07_data_shards_and_split_contract.md  08_eval_contract_reporting.md  README.md  (+4 more)
docs/: README.md  data_inventory.md  data_truth_report.md  project_structure.md  quickcheck.md  slurm_guide_project.md
notebooks/: experiment1.ipynb  transparent_surface_cues_lab.ipynb  unet_connect.ipynb
project_root/: .gitignore  train.py
slurm/: submit.sh
(+128 files in other folders)
